--- a/feedback/src/LoginPage.css
+++ b/feedback/src/LoginPage.css
@@ -8,7 +8,7 @@
 
 .flex {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   /* height: inherit; */
   /* justify-content: center; */
 }
